// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should match the snapshot with the administration form 1`] = `
<div
  className=""
>
  <div
    className="fade alert alert-info show"
    role="alert"
  >
    Note: Your form input will be saved automatically as you type.
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-8"
    >
      <h1
        className="form-title"
      >
        Admin
      </h1>
    </div>
  </div>
  <form
    className="rjsf"
    noValidate={true}
    onSubmit={[Function]}
  >
    <div
      className="form-group field field-object col-12"
    >
      <div
        className="form-row"
      >
        <div
          className="col-12"
        />
        <div
          className="col-12"
        >
          <span
            className="font-italic text-muted"
          />
        </div>
        <div
          className="form-group field field-string form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
        >
          <span
            className="jsx-977984390 title"
          >
            <button
              className="btn btn-link"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-exclamation-circle fa-w-16 "
                data-icon="exclamation-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
               
              Edit Reported Problem
            </button>
          </span>
          <span
            className="font-italic text-muted"
          />
        </div>
        <div
          className="form-group field field-object col-12"
        >
          <div
            className="form-row"
          >
            <div
              className="col-12"
            />
            <div
              className="col-12"
            >
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="col-12"
            >
              <legend
                id="root_operator__title"
              >
                Operator Information
              </legend>
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_name"
              >
                Legal name
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_name"
                label="Legal name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                type="text"
                value="est dolor"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_tradeName"
              >
                Trade name
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_tradeName"
                label="Trade name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                type="text"
                value="in qui"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_naics"
              >
                NAICS code
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_naics"
                label="NAICS code"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                type="text"
                value="51234"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_bcCorporateRegistryNumber"
              >
                BC Corporate Registry number
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_bcCorporateRegistryNumber"
                label="BC Corporate Registry number"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                type="text"
                value="U1234512"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-object col-12"
            >
              <div
                className="form-row"
              >
                <div
                  className="col-12"
                />
                <div
                  className="col-12"
                >
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="col-12"
                >
                  <legend
                    id="root_operator_mailingAddress__title"
                  >
                    Operator Mailing Address
                  </legend>
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operator_mailingAddress_streetAddress"
                  >
                    Street address
                     *
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operator_mailingAddress_streetAddress"
                    label="Street address"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={true}
                    type="text"
                    value="mollit eu esse"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operator_mailingAddress_city"
                  >
                    City
                     *
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operator_mailingAddress_city"
                    label="City"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={true}
                    type="text"
                    value="culpa"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operator_mailingAddress_postalCode"
                  >
                    Postal Code
                     *
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operator_mailingAddress_postalCode"
                    label="Postal Code"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="ex: A1A 1A1"
                    readOnly={false}
                    required={true}
                    type="text"
                    value="A1k4A1"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operator_mailingAddress_province"
                  >
                    Province or Territory
                     *
                  </label>
                  <select
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operator_mailingAddress_province"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={true}
                    value="New Brunswick"
                  >
                    <option
                      value=""
                    >
                      
                    </option>
                    <option
                      value="Alberta"
                    >
                      Alberta
                    </option>
                    <option
                      value="British Columbia"
                    >
                      British Columbia
                    </option>
                    <option
                      value="Manitoba"
                    >
                      Manitoba
                    </option>
                    <option
                      value="New Brunswick"
                    >
                      New Brunswick
                    </option>
                    <option
                      value="Newfoundland and Labrador"
                    >
                      Newfoundland and Labrador
                    </option>
                    <option
                      value="Northwest Territories"
                    >
                      Northwest Territories
                    </option>
                    <option
                      value="Nova Scotia"
                    >
                      Nova Scotia
                    </option>
                    <option
                      value="Nunavut"
                    >
                      Nunavut
                    </option>
                    <option
                      value="Ontario"
                    >
                      Ontario
                    </option>
                    <option
                      value="Prince Edward Island"
                    >
                      Prince Edward Island
                    </option>
                    <option
                      value="Quebec"
                    >
                      Quebec
                    </option>
                    <option
                      value="Saskatchewan"
                    >
                      Saskatchewan
                    </option>
                    <option
                      value="Yukon"
                    >
                      Yukon
                    </option>
                  </select>
                  <span
                    className="font-italic text-muted"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-group field field-object col-12"
        >
          <div
            className="form-row"
          >
            <div
              className="col-12"
            />
            <div
              className="col-12"
            >
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="col-12"
            >
              <legend
                id="root_operationalRepresentative__title"
              >
                Operational Representative
              </legend>
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_firstName"
              >
                First Name
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_firstName"
                label="First Name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                type="text"
                value="culpa"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_lastName"
              >
                Last Name
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_lastName"
                label="Last Name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                type="text"
                value="in qui"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_position"
              >
                Position/Title
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_position"
                label="Position/Title"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                type="text"
                value="mollit eu esse"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_email"
              >
                Email Address
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_email"
                label="Email Address"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                type="email"
                value="mzFgms@AfkpuAfkpuAfkp.ncf"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_phone"
              >
                Telephone Number
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_phone"
                label="Telephone Number"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                type="tel"
                value="consequat Ut Duis"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-object col-12"
            >
              <div
                className="form-row"
              >
                <div
                  className="col-12"
                />
                <div
                  className="col-12"
                >
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="col-12"
                >
                  <legend
                    id="root_operationalRepresentative_mailingAddress__title"
                  >
                    Operational Representative Mailing Address
                  </legend>
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operationalRepresentative_mailingAddress_streetAddress"
                  >
                    Street address
                     *
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operationalRepresentative_mailingAddress_streetAddress"
                    label="Street address"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={true}
                    type="text"
                    value="in qui"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operationalRepresentative_mailingAddress_city"
                  >
                    City
                     *
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operationalRepresentative_mailingAddress_city"
                    label="City"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={true}
                    type="text"
                    value="mollit eu esse"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operationalRepresentative_mailingAddress_postalCode"
                  >
                    Postal Code
                     *
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operationalRepresentative_mailingAddress_postalCode"
                    label="Postal Code"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="ex: A1A 1A1"
                    readOnly={false}
                    required={true}
                    type="text"
                    value="p4A2p4"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operationalRepresentative_mailingAddress_province"
                  >
                    Province or Territory
                     *
                  </label>
                  <select
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operationalRepresentative_mailingAddress_province"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={true}
                    value="British Columbia"
                  >
                    <option
                      value=""
                    >
                      
                    </option>
                    <option
                      value="Alberta"
                    >
                      Alberta
                    </option>
                    <option
                      value="British Columbia"
                    >
                      British Columbia
                    </option>
                    <option
                      value="Manitoba"
                    >
                      Manitoba
                    </option>
                    <option
                      value="New Brunswick"
                    >
                      New Brunswick
                    </option>
                    <option
                      value="Newfoundland and Labrador"
                    >
                      Newfoundland and Labrador
                    </option>
                    <option
                      value="Northwest Territories"
                    >
                      Northwest Territories
                    </option>
                    <option
                      value="Nova Scotia"
                    >
                      Nova Scotia
                    </option>
                    <option
                      value="Nunavut"
                    >
                      Nunavut
                    </option>
                    <option
                      value="Ontario"
                    >
                      Ontario
                    </option>
                    <option
                      value="Prince Edward Island"
                    >
                      Prince Edward Island
                    </option>
                    <option
                      value="Quebec"
                    >
                      Quebec
                    </option>
                    <option
                      value="Saskatchewan"
                    >
                      Saskatchewan
                    </option>
                    <option
                      value="Yukon"
                    >
                      Yukon
                    </option>
                  </select>
                  <span
                    className="font-italic text-muted"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-group field field-object col-12"
        >
          <div
            className="form-row"
          >
            <div
              className="col-12"
            />
            <div
              className="col-12"
            >
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="col-12"
            >
              <legend
                id="root_facility__title"
              >
                Facility Information
              </legend>
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_facility_facilityName"
              >
                Facility Name
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_facility_facilityName"
                label="Facility Name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                type="text"
                value="mollit eu esse"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_facility_facilityType"
              >
                Facility Type
                 *
              </label>
              <select
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_facility_facilityType"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                value="SFO"
              >
                <option
                  value=""
                >
                  
                </option>
                <option
                  value="IF_a"
                >
                  IF_a
                </option>
                <option
                  value="IF_b"
                >
                  IF_b
                </option>
                <option
                  value="L_c"
                >
                  L_c
                </option>
                <option
                  value="SFO"
                >
                  SFO
                </option>
                <option
                  value="LFO"
                >
                  LFO
                </option>
                <option
                  value="EIO"
                >
                  EIO
                </option>
              </select>
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_facility_bcghgid"
              >
                BCGHG ID Number
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_facility_bcghgid"
                label="BCGHG ID Number"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                type="text"
                value="123451"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-submit"
    >
      <div
        className="row"
      >
        <div
          className="col-md-3"
          style={
            Object {
              "lineHeight": "48px",
            }
          }
        >
          <a
            href="/reporter"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Save & Exit
          </a>
        </div>
        <div
          className="form-nav col-md-9"
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <button
            className="btn btn-secondary btn-lg"
            disabled={false}
            style={
              Object {
                "marginRight": "10px",
              }
            }
            type="button"
          >
            Back
          </button>
          <button
            className="btn btn-primary btn-lg"
            disabled={false}
            type="submit"
          >
            Next Page
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form should match the snapshot with the emission form 1`] = `
<div
  className="emission-form no-col-padding"
>
  <div
    className="fade alert alert-info show"
    role="alert"
  >
    Note: Your form input will be saved automatically as you type.
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-8"
    >
      <h1
        className="form-title"
      >
        Emission
      </h1>
    </div>
  </div>
  <form
    className="rjsf"
    noValidate={true}
    onSubmit={[Function]}
  >
    <div
      className="form-group field field-object col-12"
    >
      <div
        className="form-row"
      >
        <div
          className="col-12"
        />
        <div
          className="col-12"
        >
          <span
            className="font-italic text-muted"
          />
        </div>
        <div
          className="jsx-3846335375 show-zero-emissions"
        >
          <div
            className="emission-toggle col-md-12"
          >
            <button
              className="btn btn-outline-secondary btn-sm"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Hide gases with no reported emissions
            </button>
          </div>
          <div
            className="form-group field field-string form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
          >
            <span
              className="jsx-977984390 title"
            >
              <button
                className="btn btn-link"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-exclamation-circle fa-w-16 "
                  data-icon="exclamation-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
                 
                Edit Reported Problem
              </button>
            </span>
            <span
              className="font-italic text-muted"
            />
          </div>
          <div
            className="col-12"
          >
            <span
              className="font-italic text-muted"
            />
            <div
              className="jsx-4148384647 field field-array field-array-of-object"
            >
              <div
                className="jsx-4148384647"
              >
                <div
                  className="form-row"
                >
                  <div
                    className="col-md-12 col-12"
                  >
                    <div
                      className="form-group field field-object col-12"
                    >
                      <div
                        className="form-row"
                      >
                        <div
                          className="col-12"
                        />
                        <div
                          className="col-12"
                        >
                          <span
                            className="font-italic text-muted"
                          />
                        </div>
                        <div
                          className="form-group field field-string  hidden-title form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                        >
                          <label
                            className="form-label"
                            htmlFor="root_sourceTypes_0_sourceTypeName"
                          >
                            sourceTypeName
                          </label>
                          <div
                            className="source-field-heading row"
                            style={
                              Object {
                                "margin": "20px 0 20px 0",
                              }
                            }
                          >
                            <div
                              className="col-md-4 col-12"
                            >
                              <h5
                                className="jsx-2818596207"
                                style={
                                  Object {
                                    "textAlign": "left",
                                  }
                                }
                              >
                                culpa
                              </h5>
                            </div>
                            <div
                              className="col-md-3 col-12"
                            >
                              <h6
                                className="jsx-2818596207"
                              >
                                Tonnes
                              </h6>
                            </div>
                            <div
                              className="col-md-2 col-12"
                            >
                              <h6
                                className="jsx-2818596207"
                              >
                                GWP
                              </h6>
                            </div>
                            <div
                              className="col-md-3 col-12"
                            >
                              <h6
                                className="jsx-2818596207"
                              >
                                Tonnes (CO2e)
                              </h6>
                            </div>
                          </div>
                          <span
                            className="font-italic text-muted"
                          />
                        </div>
                        <div
                          className="col-12"
                        >
                          <span
                            className="font-italic text-muted"
                          />
                          <div
                            className="jsx-4148384647 field field-array field-array-of-object"
                          >
                            <div
                              className="jsx-4148384647"
                            >
                              <div
                                className="form-row"
                              >
                                <div
                                  className="col-md-12 col-12"
                                >
                                  <div
                                    className="form-group field field-object  hidden-title col-12"
                                  >
                                    <div
                                      className="form-row"
                                    >
                                      <div
                                        className="col-12"
                                      />
                                      <div
                                        className="col-12"
                                      >
                                        <span
                                          className="font-italic text-muted"
                                        />
                                      </div>
                                      <div
                                        className=" emission-row col-md-12 col-12"
                                      >
                                        <div
                                          className="form-row"
                                        >
                                          <div
                                            className="col-md-4"
                                          >
                                            in qui
                                             
                                            <br
                                              className="jsx-381954189"
                                            />
                                            <div
                                              className="col-md-10"
                                              style={
                                                Object {
                                                  "color": "#888",
                                                  "lineHeight": "17px",
                                                  "margin": 0,
                                                  "padding": 0,
                                                }
                                              }
                                            >
                                              <small
                                                className="jsx-381954189"
                                              >
                                                consequat Ut Duis
                                              </small>
                                            </div>
                                          </div>
                                          <div
                                            className="col-md-3"
                                          >
                                            <div
                                              className="form-group field field-number form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                                            >
                                              <label
                                                className="form-label"
                                                htmlFor="emissions.annualEmission"
                                              />
                                              <input
                                                className="form-control"
                                                disabled={false}
                                                id="root_sourceTypes_0_gases_0_annualEmission"
                                                inputMode="numeric"
                                                onBlur={[Function]}
                                                onChange={[Function]}
                                                onFocus={[Function]}
                                                onKeyDown={[Function]}
                                                onMouseUp={[Function]}
                                                type="text"
                                                value="30,000,000"
                                              />
                                              <span
                                                className="font-italic text-muted"
                                              />
                                            </div>
                                          </div>
                                          <div
                                            className="col-md-2"
                                            style={
                                              Object {
                                                "textAlign": "center",
                                              }
                                            }
                                          >
                                            <ul
                                              className="jsx-381954189 gwp"
                                            >
                                              <li
                                                className="jsx-381954189"
                                              >
                                                X
                                              </li>
                                              <li
                                                className="jsx-381954189"
                                              >
                                                0
                                              </li>
                                              <li
                                                className="jsx-381954189"
                                              >
                                                =
                                              </li>
                                            </ul>
                                          </div>
                                          <div
                                            className="col-md-3"
                                            style={
                                              Object {
                                                "textAlign": "center",
                                              }
                                            }
                                          >
                                            <div
                                              className="form-group field field-number form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                                            >
                                              <label
                                                className="form-label"
                                                htmlFor="emissions.annualCO2e"
                                              />
                                              <span
                                                disabled={false}
                                                id="root_sourceTypes_0_gases_0_annualCO2e"
                                              >
                                                -60,000,000
                                              </span>
                                              <span
                                                className="font-italic text-muted"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <hr
                                className="jsx-4148384647"
                              />
                            </div>
                            <div
                              className="jsx-4148384647"
                            >
                              <div
                                className="form-row"
                              >
                                <div
                                  className="col-md-12 col-12"
                                >
                                  <div
                                    className="form-group field field-object  hidden-title col-12"
                                  >
                                    <div
                                      className="form-row"
                                    >
                                      <div
                                        className="col-12"
                                      />
                                      <div
                                        className="col-12"
                                      >
                                        <span
                                          className="font-italic text-muted"
                                        />
                                      </div>
                                      <div
                                        className=" emission-row col-md-12 col-12"
                                      >
                                        <div
                                          className="form-row"
                                        >
                                          <div
                                            className="col-md-4"
                                          >
                                            mollit eu esse
                                             
                                            <br
                                              className="jsx-381954189"
                                            />
                                            <div
                                              className="col-md-10"
                                              style={
                                                Object {
                                                  "color": "#888",
                                                  "lineHeight": "17px",
                                                  "margin": 0,
                                                  "padding": 0,
                                                }
                                              }
                                            >
                                              <small
                                                className="jsx-381954189"
                                              >
                                                in qui
                                              </small>
                                            </div>
                                          </div>
                                          <div
                                            className="col-md-3"
                                          >
                                            <div
                                              className="form-group field field-number form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                                            >
                                              <label
                                                className="form-label"
                                                htmlFor="emissions.annualEmission"
                                              />
                                              <input
                                                className="form-control"
                                                disabled={false}
                                                id="root_sourceTypes_0_gases_1_annualEmission"
                                                inputMode="numeric"
                                                onBlur={[Function]}
                                                onChange={[Function]}
                                                onFocus={[Function]}
                                                onKeyDown={[Function]}
                                                onMouseUp={[Function]}
                                                type="text"
                                                value="50,000,000"
                                              />
                                              <span
                                                className="font-italic text-muted"
                                              />
                                            </div>
                                          </div>
                                          <div
                                            className="col-md-2"
                                            style={
                                              Object {
                                                "textAlign": "center",
                                              }
                                            }
                                          >
                                            <ul
                                              className="jsx-381954189 gwp"
                                            >
                                              <li
                                                className="jsx-381954189"
                                              >
                                                X
                                              </li>
                                              <li
                                                className="jsx-381954189"
                                              >
                                                -60000000
                                              </li>
                                              <li
                                                className="jsx-381954189"
                                              >
                                                =
                                              </li>
                                            </ul>
                                          </div>
                                          <div
                                            className="col-md-3"
                                            style={
                                              Object {
                                                "textAlign": "center",
                                              }
                                            }
                                          >
                                            <div
                                              className="form-group field field-number form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                                            >
                                              <label
                                                className="form-label"
                                                htmlFor="emissions.annualCO2e"
                                              />
                                              <span
                                                disabled={false}
                                                id="root_sourceTypes_0_gases_1_annualCO2e"
                                              >
                                                -20,000,000
                                              </span>
                                              <span
                                                className="font-italic text-muted"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <hr
                                className="jsx-4148384647"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  className="jsx-4148384647"
                />
              </div>
              <div
                className="jsx-4148384647"
              >
                <div
                  className="form-row"
                >
                  <div
                    className="col-md-12 col-12"
                  >
                    <div
                      className="form-group field field-object col-12"
                    >
                      <div
                        className="form-row"
                      >
                        <div
                          className="col-12"
                        />
                        <div
                          className="col-12"
                        >
                          <span
                            className="font-italic text-muted"
                          />
                        </div>
                        <div
                          className="form-group field field-string  hidden-title form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                        >
                          <label
                            className="form-label"
                            htmlFor="root_sourceTypes_1_sourceTypeName"
                          >
                            sourceTypeName
                          </label>
                          <div
                            className="source-field-heading row"
                            style={
                              Object {
                                "margin": "20px 0 20px 0",
                              }
                            }
                          >
                            <div
                              className="col-md-4 col-12"
                            >
                              <h5
                                className="jsx-2818596207"
                                style={
                                  Object {
                                    "textAlign": "left",
                                  }
                                }
                              >
                                consequat Ut Duis
                              </h5>
                            </div>
                            <div
                              className="col-md-3 col-12"
                            >
                              <h6
                                className="jsx-2818596207"
                              >
                                Tonnes
                              </h6>
                            </div>
                            <div
                              className="col-md-2 col-12"
                            >
                              <h6
                                className="jsx-2818596207"
                              >
                                GWP
                              </h6>
                            </div>
                            <div
                              className="col-md-3 col-12"
                            >
                              <h6
                                className="jsx-2818596207"
                              >
                                Tonnes (CO2e)
                              </h6>
                            </div>
                          </div>
                          <span
                            className="font-italic text-muted"
                          />
                        </div>
                        <div
                          className="col-12"
                        >
                          <span
                            className="font-italic text-muted"
                          />
                          <div
                            className="jsx-4148384647 field field-array field-array-of-object"
                          >
                            <div
                              className="jsx-4148384647"
                            >
                              <div
                                className="form-row"
                              >
                                <div
                                  className="col-md-12 col-12"
                                >
                                  <div
                                    className="form-group field field-object  hidden-title col-12"
                                  >
                                    <div
                                      className="form-row"
                                    >
                                      <div
                                        className="col-12"
                                      />
                                      <div
                                        className="col-12"
                                      >
                                        <span
                                          className="font-italic text-muted"
                                        />
                                      </div>
                                      <div
                                        className=" emission-row col-md-12 col-12"
                                      >
                                        <div
                                          className="form-row"
                                        >
                                          <div
                                            className="col-md-4"
                                          >
                                            culpa
                                             
                                            <br
                                              className="jsx-381954189"
                                            />
                                            <div
                                              className="col-md-10"
                                              style={
                                                Object {
                                                  "color": "#888",
                                                  "lineHeight": "17px",
                                                  "margin": 0,
                                                  "padding": 0,
                                                }
                                              }
                                            >
                                              <small
                                                className="jsx-381954189"
                                              >
                                                mollit eu esse
                                              </small>
                                            </div>
                                          </div>
                                          <div
                                            className="col-md-3"
                                          >
                                            <div
                                              className="form-group field field-number form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                                            >
                                              <label
                                                className="form-label"
                                                htmlFor="emissions.annualEmission"
                                              />
                                              <input
                                                className="form-control"
                                                disabled={false}
                                                id="root_sourceTypes_1_gases_0_annualEmission"
                                                inputMode="numeric"
                                                onBlur={[Function]}
                                                onChange={[Function]}
                                                onFocus={[Function]}
                                                onKeyDown={[Function]}
                                                onMouseUp={[Function]}
                                                type="text"
                                                value="20,000,000"
                                              />
                                              <span
                                                className="font-italic text-muted"
                                              />
                                            </div>
                                          </div>
                                          <div
                                            className="col-md-2"
                                            style={
                                              Object {
                                                "textAlign": "center",
                                              }
                                            }
                                          >
                                            <ul
                                              className="jsx-381954189 gwp"
                                            >
                                              <li
                                                className="jsx-381954189"
                                              >
                                                X
                                              </li>
                                              <li
                                                className="jsx-381954189"
                                              >
                                                -20000000
                                              </li>
                                              <li
                                                className="jsx-381954189"
                                              >
                                                =
                                              </li>
                                            </ul>
                                          </div>
                                          <div
                                            className="col-md-3"
                                            style={
                                              Object {
                                                "textAlign": "center",
                                              }
                                            }
                                          >
                                            <div
                                              className="form-group field field-number form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                                            >
                                              <label
                                                className="form-label"
                                                htmlFor="emissions.annualCO2e"
                                              />
                                              <span
                                                disabled={false}
                                                id="root_sourceTypes_1_gases_0_annualCO2e"
                                              >
                                                -80,000,000
                                              </span>
                                              <span
                                                className="font-italic text-muted"
                                              />
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <hr
                                className="jsx-4148384647"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  className="jsx-4148384647"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-submit"
    >
      <div
        className="row"
      >
        <div
          className="col-md-3"
          style={
            Object {
              "lineHeight": "48px",
            }
          }
        >
          <a
            href="/reporter"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Save & Exit
          </a>
        </div>
        <div
          className="form-nav col-md-9"
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <button
            className="btn btn-secondary btn-lg"
            disabled={false}
            style={
              Object {
                "marginRight": "10px",
              }
            }
            type="button"
          >
            Back
          </button>
          <button
            className="btn btn-primary btn-lg"
            disabled={false}
            type="submit"
          >
            Next Page
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form should match the snapshot with the fuel form 1`] = `
<div
  className=""
>
  <div
    className="fade alert alert-info show"
    role="alert"
  >
    Note: Your form input will be saved automatically as you type.
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-8"
    >
      <h1
        className="form-title"
      >
        Fuel
      </h1>
    </div>
  </div>
  <form
    className="rjsf"
    noValidate={true}
    onSubmit={[Function]}
  >
    <div
      className="col-12"
    >
      <span
        className="font-italic text-muted"
      />
      <div
        className="jsx-4148384647 field field-array field-array-of-object"
      >
        <div
          className="jsx-4148384647"
        >
          <div
            className="form-row"
          >
            <div
              className="col-md-11 col-12"
            >
              <div
                className="form-group field field-object col-12"
              >
                <div
                  className="form-row"
                >
                  <div
                    className="col-12"
                  />
                  <div
                    className="col-12"
                  >
                    <span
                      className="font-italic text-muted"
                    />
                  </div>
                  <div
                    className="form-group field field-string form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                  >
                    <span
                      className="jsx-977984390 title"
                    >
                      <button
                        className="btn btn-link"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          className="svg-inline--fa fa-exclamation-circle fa-w-16 "
                          data-icon="exclamation-circle"
                          data-prefix="fas"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 512 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                         
                        Edit Reported Problem
                      </button>
                    </span>
                    <span
                      className="font-italic text-muted"
                    />
                  </div>
                  <div
                    className="form-group field field-number form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                  >
                    <label
                      className="form-label"
                      htmlFor="root_0_fuelRowId"
                    >
                      Fuel Name
                       *
                    </label>
                    one
                    <span
                      className="font-italic text-muted"
                    />
                  </div>
                  <div
                    className="form-group field field-number form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
                  >
                    <label
                      className="form-label"
                      htmlFor="root_0_quantity"
                    >
                      Quantity
                       *
                    </label>
                    <input
                      className="form-control"
                      disabled={false}
                      id="root_0_quantity"
                      inputMode="numeric"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseUp={[Function]}
                      type="text"
                      value="-80,000,000"
                    />
                    <span
                      className="font-italic text-muted"
                    />
                  </div>
                  <div
                    className="form-group field field-string form-group col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12"
                  >
                    <label
                      className="form-label"
                      htmlFor="root_0_fuelUnits"
                    >
                      Units
                    </label>
                    <input
                      autoFocus={false}
                      className="form-control"
                      disabled={false}
                      id="root_0_fuelUnits"
                      label="Units"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      readOnly={true}
                      required={false}
                      type="text"
                      value="est dolor"
                    />
                    <span
                      className="font-italic text-muted"
                    />
                  </div>
                  <div
                    className="form-group field field-number form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                  >
                    <label
                      className="form-label"
                      htmlFor="root_0_emissionCategoryRowId"
                    >
                      Emission Category
                       *
                    </label>
                    <select
                      autoFocus={false}
                      className="form-control"
                      disabled={false}
                      id="root_0_emissionCategoryRowId"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={true}
                      value={-40000000}
                    >
                      <option
                        value=""
                      >
                        
                      </option>
                      <option
                        value={42}
                      >
                        &lt;mock-value-for-field-"displayName"&gt;
                      </option>
                    </select>
                    <span
                      className="font-italic text-muted"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-md-1 col-12"
            >
              <div
                className="jsx-4148384647 remove-button-container"
              >
                <button
                  className="btn btn-danger"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Remove fuel
                </button>
              </div>
            </div>
          </div>
          <hr
            className="jsx-4148384647"
          />
        </div>
        <div
          className="form-row"
        >
          <div
            className="col-12"
          >
            <div
              className="jsx-4148384647 add-button-container"
            >
              <button
                className="btn btn-primary"
                disabled={false}
                id="root-add"
                onClick={[Function]}
                type="button"
              >
                Add a fuel
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-submit"
    >
      <div
        className="row"
      >
        <div
          className="col-md-3"
          style={
            Object {
              "lineHeight": "48px",
            }
          }
        >
          <a
            href="/reporter"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Save & Exit
          </a>
        </div>
        <div
          className="form-nav col-md-9"
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <button
            className="btn btn-secondary btn-lg"
            disabled={false}
            style={
              Object {
                "marginRight": "10px",
              }
            }
            type="button"
          >
            Back
          </button>
          <button
            className="btn btn-primary btn-lg"
            disabled={false}
            type="submit"
          >
            Next Page
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form should match the snapshot with the production form 1`] = `
<div
  className=""
>
  <div
    className="fade alert alert-info show"
    role="alert"
  >
    Note: Your form input will be saved automatically as you type.
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-8"
    >
      <h1
        className="form-title"
      >
        Production
      </h1>
    </div>
  </div>
  <form
    className="rjsf"
    noValidate={true}
    onSubmit={[Function]}
  >
    <div
      className="col-12"
    >
      <span
        className="font-italic text-muted"
      />
      <div
        className="jsx-4148384647 field field-array field-array-of-object"
      >
        <div
          className="jsx-4148384647"
        >
          <div
            className="form-row"
          >
            <div
              className="col-md-11 col-12"
            >
              <div
                className="form-group field field-object col-12"
              >
                <div
                  className="form-row"
                >
                  <div
                    className="col-12"
                  />
                  <div
                    className="col-12"
                  >
                    <span
                      className="font-italic text-muted"
                    />
                  </div>
                  <div
                    className="form-group field field-string form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                  >
                    <span
                      className="jsx-977984390 title"
                    >
                      <button
                        className="btn btn-link"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          className="svg-inline--fa fa-exclamation-circle fa-w-16 "
                          data-icon="exclamation-circle"
                          data-prefix="fas"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 512 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                         
                        Edit Reported Problem
                      </button>
                    </span>
                    <span
                      className="font-italic text-muted"
                    />
                  </div>
                  <div
                    className="form-group field field-integer form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                  >
                    <label
                      className="form-label"
                      htmlFor="root_0_productRowId"
                    >
                      Product or Service
                       *
                    </label>
                    <div>
                      <div
                        className="mb-3 input-group"
                      >
                        <div
                          className="input-group-prepend"
                        >
                          <span
                            className="input-group-text"
                          />
                        </div>
                      </div>
                    </div>
                    <span
                      className="font-italic text-muted"
                    />
                  </div>
                  <div
                    className="form-group field field-number form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
                  >
                    <label
                      className="form-label"
                      htmlFor="root_0_productAmount"
                    >
                      Annual Production Amount
                       *
                    </label>
                    <input
                      className="form-control"
                      disabled={false}
                      id="root_0_productAmount"
                      inputMode="numeric"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseUp={[Function]}
                      type="text"
                      value="20,000,000"
                    />
                    <span
                      className="font-italic text-muted"
                    >
                      <p
                        className="help-block"
                      >
                        Report the annual production for the product, following the guidance document provided
                      </p>
                    </span>
                  </div>
                  <div
                    className="form-group field field-string form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
                  >
                    <label
                      className="form-label"
                      htmlFor="root_0_productUnits"
                    >
                      Units
                    </label>
                    <input
                      autoFocus={false}
                      className="form-control"
                      disabled={false}
                      id="root_0_productUnits"
                      label="Units"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      readOnly={true}
                      required={false}
                      type="text"
                      value="mollit eu esse"
                    />
                    <span
                      className="font-italic text-muted"
                    />
                  </div>
                  <div
                    className="hidden"
                  >
                    <input
                      id="root_0_requiresEmissionAllocation"
                      type="hidden"
                      value={false}
                    />
                  </div>
                  <div
                    className="hidden"
                  >
                    <input
                      id="root_0_requiresProductAmount"
                      type="hidden"
                      value={true}
                    />
                  </div>
                  <div
                    className="hidden"
                  >
                    <input
                      id="root_0_isEnergyProduct"
                      type="hidden"
                      value={false}
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-md-1 col-12"
            >
              <div
                className="jsx-4148384647 remove-button-container"
              >
                <button
                  className="btn btn-danger"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Remove Product
                </button>
              </div>
            </div>
          </div>
          <hr
            className="jsx-4148384647"
          />
        </div>
        <div
          className="jsx-4148384647"
        >
          <div
            className="form-row"
          >
            <div
              className="col-md-11 col-12"
            >
              <div
                className="form-group field field-object col-12"
              >
                <div
                  className="form-row"
                >
                  <div
                    className="col-12"
                  />
                  <div
                    className="col-12"
                  >
                    <span
                      className="font-italic text-muted"
                    />
                  </div>
                  <div
                    className="form-group field field-string form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                  >
                    <span
                      className="jsx-977984390 title"
                    >
                      <button
                        className="btn btn-link"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          className="svg-inline--fa fa-exclamation-circle fa-w-16 "
                          data-icon="exclamation-circle"
                          data-prefix="fas"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 512 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                         
                        Edit Reported Problem
                      </button>
                    </span>
                    <span
                      className="font-italic text-muted"
                    />
                  </div>
                  <div
                    className="form-group field field-integer form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                  >
                    <label
                      className="form-label"
                      htmlFor="root_1_productRowId"
                    >
                      Product or Service
                       *
                    </label>
                    <div>
                      <div
                        className="mb-3 input-group"
                      >
                        <div
                          className="input-group-prepend"
                        >
                          <span
                            className="input-group-text"
                          />
                        </div>
                      </div>
                    </div>
                    <span
                      className="font-italic text-muted"
                    />
                  </div>
                  <div
                    className="hidden"
                  >
                    <input
                      id="root_1_requiresEmissionAllocation"
                      type="hidden"
                      value={false}
                    />
                  </div>
                  <div
                    className="hidden"
                  >
                    <input
                      id="root_1_requiresProductAmount"
                      type="hidden"
                      value={false}
                    />
                  </div>
                  <div
                    className="hidden"
                  >
                    <input
                      id="root_1_isEnergyProduct"
                      type="hidden"
                      value={false}
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-md-1 col-12"
            >
              <div
                className="jsx-4148384647 remove-button-container"
              >
                <button
                  className="btn btn-danger"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Remove Product
                </button>
              </div>
            </div>
          </div>
          <hr
            className="jsx-4148384647"
          />
        </div>
        <div
          className="form-row"
        >
          <div
            className="col-12"
          >
            <div
              className="jsx-4148384647 add-button-container"
            >
              <button
                className="btn btn-primary"
                disabled={false}
                id="root-add"
                onClick={[Function]}
                type="button"
              >
                Add a Product
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-submit"
    >
      <div
        className="row"
      >
        <div
          className="col-md-3"
          style={
            Object {
              "lineHeight": "48px",
            }
          }
        >
          <a
            href="/reporter"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Save & Exit
          </a>
        </div>
        <div
          className="form-nav col-md-9"
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <button
            className="btn btn-secondary btn-lg"
            disabled={false}
            style={
              Object {
                "marginRight": "10px",
              }
            }
            type="button"
          >
            Back
          </button>
          <button
            className="btn btn-primary btn-lg"
            disabled={false}
            type="submit"
          >
            Next Page
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
